fix overflow carrousel

--- a/src/components/Carrousel/Carrousel.scss
+++ b/src/components/Carrousel/Carrousel.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+
+    overflow: hidden;
 }
 
 .imageCarrousel {
@@ -11,15 +13,6 @@
     width : 100%;
     height : 250px;
 }
-
-// .imageOpacityAnimation {
-//     animation: 0.3s imageOpacity;
-// }
-
-// @keyframes imageOpacity {
-//     from { opacity : 1 };
-//     to { opacity : 0 }
-// };
 
 .pageNumber {
     align-self: center;
