--- a/src/index.css
+++ b/src/index.css
@@ -235,6 +235,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  overflow: hidden;
 }
 
 .imageCarrousel {
